--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -17,6 +17,35 @@ CHAPS:
   - shinma_cha_09.re
   - shinma_cha_10.re
 
+  - okihara_0x07_ch01-draft.re
+  - okihara_0x07_ch02-draft.re
+  - okihara_0x07_ch03-draft.re
+  - okihara_0x07_ch04-draft.re
+  - okihara_0x07_ch05-draft.re
+  - okihara_0x07_ch06-draft.re
+  - okihara_0x07_ch07-draft.re
+  - okihara_0x07_ch08-draft.re
+  - okihara_0x07_ch09-draft.re
+  - okihara_0x07_ch10-draft.re
+  - okihara_0x07_ch11-draft.re
+  - okihara_0x07_ch12-draft.re
+  - okihara_0x07_ch13-draft.re
+
+  - okihara_legacy_no_hitugi_ch01-draft.re
+  - okihara_legacy_no_hitugi_ch02-draft.re
+  - okihara_legacy_no_hitugi_ch03-draft.re
+  - okihara_legacy_no_hitugi_ch04-draft.re
+  - okihara_legacy_no_hitugi_ch05-draft.re
+  - okihara_legacy_no_hitugi_ch06-draft.re
+  - okihara_legacy_no_hitugi_ch07-draft.re
+  - okihara_legacy_no_hitugi_ch08-draft.re
+  - okihara_legacy_no_hitugi_ch09-draft.re
+  - okihara_legacy_no_hitugi_ch10-draft.re
+  - okihara_legacy_no_hitugi_ch11-draft.re
+  - okihara_legacy_no_hitugi_ch12-draft.re
+  - okihara_legacy_no_hitugi_ch13-draft.re
+  - okihara_legacy_no_hitugi_ch14-draft.re
+  - okihara_legacy_no_hitugi_ch15-draft.re
 APPENDIX:
 
 POSTDEF:
