--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -2,7 +2,7 @@ PREDEF:
   - はじめに.re
 
 CHAPS:
-  - 「水野純一の物語」:
+  - 「Hello, App Store! AIを先生にiOSエンジニアになった365日」:
     - shohei_cha_01.re
     - shohei_cha_02.re
     - shohei_cha_03.re
