--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -2,14 +2,14 @@ PREDEF:
   - はじめに.re
 
 CHAPS:
-  - 「Hello, App Store! AIを先生にiOSエンジニアになった365日」:
+  - 「Hello, App Store! AIを先生にiOSエンジニアになった365日」（Shohei 著）:
     - shohei_cha_01.re
     - shohei_cha_02.re
     - shohei_cha_03.re
     - shohei_cha_04.re
     - shohei_cha_05.re
 
-  - 「ブロックチェーン」:
+  - 「ブロックチェーン」（Shinma 著）:
     - shinma_cha_01.re
     - shinma_cha_02.re
     - shinma_cha_03.re
@@ -21,7 +21,7 @@ CHAPS:
     - shinma_cha_09.re
     - shinma_cha_10.re
 
-  - 「0x07」:
+  - 「0x07」（ShusukeO 著）:
     - okihara_0x07_ch01-draft.re
     - okihara_0x07_ch02-draft.re
     - okihara_0x07_ch03-draft.re
@@ -36,7 +36,7 @@ CHAPS:
     - okihara_0x07_ch12-draft.re
     - okihara_0x07_ch13-draft.re
 
-  - 「レガシーの棺」:
+  - 「レガシーの棺」（ShusukeO 著）:
     - okihara_legacy_no_hitugi_ch01-draft.re
     - okihara_legacy_no_hitugi_ch02-draft.re
     - okihara_legacy_no_hitugi_ch03-draft.re
